<?xml version="1.0"?>
<package format="2">
  <name>connectwo_control</name>
  <version>0.1.0</version>
  <description>The connectwo_control package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_state_controller</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>

  <!-- Add other dependencies here -->

  <export>
  </export>
</package>